--- a/.flowconfig
+++ b/.flowconfig
@@ -5,23 +5,25 @@
 [include]
 
 [libs]
+flow-typed
 
 [lints]
 deprecated-utility=off
 
 [options]
-module.system.node.resolve_dirname=.
-module.system.node.resolve_dirname=src
-module.system.node.resolve_dirname=node_modules
+module.name_mapper='^~\(.*\)$' -> '<PROJECT_ROOT>/src/\1'
+; module.system.node.resolve_dirname=.
+; module.system.node.resolve_dirname=src
+; module.system.node.resolve_dirname=node_modules
 
 suppress_type=$FlowIssue
 suppress_type=$FlowFixMe
 suppress_type=$FlowFixMeProps
 suppress_type=$FlowFixMeState
 
-suppress_comment=\\(.\\|\n\\)*\\$FlowFixMe\\($\\|[^(]\\|(\\(<VERSION>\\)? *\\(site=[a-z,_]*react_native[a-z,_]*\\)?)\\)
-suppress_comment=\\(.\\|\n\\)*\\$FlowIssue\\((\\(<VERSION>\\)? *\\(site=[a-z,_]*react_native[a-z,_]*\\)?)\\)?:? #[0-9]+
-suppress_comment=\\(.\\|\n\\)*\\$FlowFixedInNextDeploy
-suppress_comment=\\(.\\|\n\\)*\\$FlowExpectedError
+; suppress_comment=\\(.\\|\n\\)*\\$FlowFixMe\\($\\|[^(]\\|(\\(<VERSION>\\)? *\\(site=[a-z,_]*react_native[a-z,_]*\\)?)\\)
+; suppress_comment=\\(.\\|\n\\)*\\$FlowIssue\\((\\(<VERSION>\\)? *\\(site=[a-z,_]*react_native[a-z,_]*\\)?)\\)?:? #[0-9]+
+; suppress_comment=\\(.\\|\n\\)*\\$FlowFixedInNextDeploy
+; suppress_comment=\\(.\\|\n\\)*\\$FlowExpectedError
 
 [strict]
